--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-aiosignal==1.2.0
-async-timeout==4.0.2
-attrs==22.1.0
-charset-normalizer==2.1.1
-discord.py==2.0.1
-idna==3.4
-multidict==6.0.2
-python-dotenv==0.21.0
+aiohttp
+aiosignal
+async-timeout
+attrs
+charset-normalizer
+discord.py
+frozenlist
+idna
+multidict
+python-dotenv
+yarl
